🐛 fix: fix horizontal scroll

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,7 @@ body {
     )
     fixed;
   background-color: rgb(26, 8, 66);
+  overflow-x: hidden;
 }
 
 .header-dropdown {
